tests/tooling/fixtures/native/recovery/positive/binary_literal_uppercase_prefix.objc3
module BinaryLiteralUppercasePrefix;

let mask = 0B1010;
let shift = 0B1;

fn main() -> i32 {
  return (mask >> shift) + 0b1;
}
