tests/tooling/fixtures/native/recovery/negative/negative_conditional_parser_missing_colon.objc3
// Expected diagnostic code(s): O3P107.
module NegativeConditionalParserMissingColon;

fn main() -> i32 {
  let x = true ? 1 2;
  return x;
}
